test/results/whitespace-twice.owltest.stderr
error: this whitespace was specified twice

  .whitespace 'x'
              ~~~
  .whitespace 'x'
              ~~~

